[gd_scene load_steps=2 format=3 uid="uid://dcid1wrtm33rm"]

[ext_resource type="Script" uid="uid://da1ubufsc0470" path="res://Battle/Menu Templates/active_unit_menu.gd" id="1_nvwyu"]

[node name="ActiveUnitMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nvwyu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 95.0
offset_bottom = 71.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MoveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../WaitButton")
focus_neighbor_bottom = NodePath("../ActButton")
text = "MOVE"

[node name="ActButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../MoveButton")
focus_neighbor_bottom = NodePath("../StatusButton")
text = "Act"

[node name="StatusButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ActButton")
focus_neighbor_bottom = NodePath("../WaitButton")
text = "Status"

[node name="WaitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../StatusButton")
focus_neighbor_bottom = NodePath("../MoveButton")
text = "End Turn"
